# syndicateclaw

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  .pre-commit-config.yaml  .releaserc.json  AGENTS.md  AUDIT_EVENTS.md  AUDIT_FINDINGS.md  BACKUP_RESTORE.md  CHANGELOG.md  CLAUDE.md  COVERAGE_DELTA.md  Dockerfile  ENTERPRISE_DEPLOYMENT_READINESS.md  FINAL_AUDIT_REPORT.md  IDENTITY_INTEGRATION.md  OBSERVABILITY.md  PILOT_DEPLOYMENT_CHECKLIST.md  PILOT_QUICKSTART.md  PRODUCT_MODES.md  README.md  RELEASE_PROCESS.md  RELEASE_PROVENANCE_STATUS.md  RUNBOOK.md  SECRETS_OPERATIONS.md  SECURITY.md  SECURITY_EVIDENCE_PACK.md  TENANCY_MODEL.md  alembic.ini  docker-compose.env.yml  docker-compose.syndicategate.yml  docker-compose.yml  providers.syndicategate.yaml.example  providers.yaml.example  pyproject.toml  ruff_errors.json  setup.cfg  syndicateclaw_cab_memo.md  syndicateclaw_ci_gates.md  (+15 more)
console/: index.html  package-lock.json  package.json  tailwind.config.js  tsconfig.json  tsconfig.node.tsbuildinfo  tsconfig.tsbuildinfo  vite.config.js  vite.config.ts
console/src/: App.tsx  index.css
deploy/examples/: README.md
deploy/k8s/: configmap.yaml  deployment.yaml  hpa.yaml  ingress.yaml  namespace.yaml  networkpolicy.yaml  poddisruptionbudget.yaml  secret.yaml  service.yaml
deploy/monitoring/: alerts.yaml  loki-values.yaml  promtail-values.yaml
docs/: CONTROL_ASSERTIONS.md  README_CONNECTORS.md  architecture.md  environments.md  failure-modes.md  operations.md  phase0-acceptance.md  phase0-checklist.md  phase0-staging-verification.md  phase1-shadow-spec.md  phase1-staging-verification.md  rbac-design.md  rbac-implementation-plan.md  redis_graceful_degradation.md  release-gates.md  threat-model.md  v2-audit-roadmap.md
docs/adr/: 0001-rbac-enforcement-promotion.md  0002-fail-closed-policy-engine.md  0003-append-only-audit-log.md  0004-postgresql-for-state.md  0005-ulid-identifiers.md  0006-safe-expression-evaluator.md  0007-provider-abstraction.md  0008-postgres-queue-agent-messages.md  0009-scheduler-skip-locked.md  0010-namespace-multitenancy.md  0011-plugin-sandbox.md  0012-workflow-versioning-table.md  0013-streaming-and-builder-tokens.md  0014-local-runtime-boundaries.md  0015-completeness-audit-deferrals.md
docs/api/: openapi.json  permission-table.md
docs/client-production/: README.md  environment-contract.md  install-smoke-test.md  network-boundaries.md  readiness-checklist.md  rollback-and-recovery.md  secrets-and-certificates.md
docs/operations/: RUNBOOK.md  rbac-pre-demo-checklist.md  slo-definitions.md
docs/plans/: impl-plan-v1.1.0.md  impl-plan-v1.2.0.md  impl-plan-v1.3.0.md  impl-plan-v1.4.0.md  impl-plan-v1.5.0.md  impl-plan-v2.0.0.md
docs/release/: RELEASE_CHECKLIST.md  RELEASE_FLOW_GATING.md  RELEASE_PROVENANCE_SPECIFICATION.md  SIGNED_RELEASE_FLOW.md  SIGNED_TAG_DRY_RUN.md
docs/runtime/: PROMOTION_CRITERIA.md
docs/specs/: adversarial-review.md  v1.1.0-hardened-foundations.md  v1.2.0-llm-ready.md  v1.3.0-agent-mesh.md  v1.4.0-enterprise-runtime.md  v1.5.0-developer-experience.md  v2.0.0-stable-enterprise.md
examples/: first_value_workflow.sh  incident_triage.py  knowledge_capture.py  outbound_comms.py  scheduled_memory_review.py
migrations/: env.py
migrations/versions/: 001_rbac_tables.py  002_owning_scope_columns.py  003_audit_rbac_columns.py  004_shadow_evaluations.py  005_inference_tables.py  006_api_key_scopes.py  006_inference_envelope_result_json.py  007_merge_heads.py  007_merge_heads_finalize.py  008_streaming_tokens.py  009_agents.py  010_agent_messages.py  011_topic_subscriptions.py  012_workflow_versions.py  013_workflow_definitions_versioning.py  014_organizations.py  015_organization_members.py  016_workflow_schedules.py  017_workflow_runs_scheduler_fields.py  018_namespace_workflow_definitions.py  019_namespace_workflow_runs.py  020_namespace_agent_messages.py  021_namespace_policy_rules.py  023_performance_indexes.py  024_plugin_event_types.py  025_builder_token_type.py  026_drop_stale_workflow_definition_uq.py  373526e19799_add_inference_catalog_and_shadow_.py  4b5d729830cf_add_inference_catalog_and_shadow_.py
roadmap/: SAML_GAP.md  SCIM_GAP.md
scripts/: check_audit_gates.py  check_benchmark_regression.py  config-fingerprint.sh  dependency-audit.sh  deploy.sh  enterprise-readiness-check.sh  env-provision.sh  env-sweep.sh  env-teardown.sh  env.sh  export-audit-evidence.sh  generate-provenance-evidence.sh  generate-sbom.sh  init-multi-db.sh  postdeploy-verify.sh  predeploy-migration-check.sh  preflight-env-check.sh  release-gate-check.sh  restore-drill-checklist.sh  security-review-check.sh  seed-qa.py  seed_rbac_phase0.py  shadow_traffic.py  smoke-test.sh  smoke_test.sh
scripts/ci/: check_release_deploy_gating.py
scripts/integration/: _claw_boundary_proof.py  _claw_real_executor_proof.py  run-claw-boundary.sh
scripts/release/: build_release_commit.py  create_signed_tag.py  generate_release_manifest.py  release_dry_run.sh  release_state_dry_run.sh  verify_release_provenance.py
sdk/: pyproject.toml
sdk/src/syndicateclaw_sdk/: __init__.py  builder.py  client.py  exceptions.py  local.py  streaming.py
sdk/src/syndicateclaw_sdk/resources/: workflows.py
specs/: SDD-CLAW-DURABLE-EXECUTOR-BOUNDARY-002.md  SDD-CLAW-RUNTIME-BOUNDARY-001.md
src/: providers.yaml.example
src/syndicateclaw/: __init__.py  config.py  errors.py  models.py  validation.py  version.py
tests/: adversarial_test.py  conftest.py  factories.py  test_route_registry_coverage.py
tests/chaos/: helpers.py  test_infrastructure_chaos.py
tests/integration/: conftest.py  test_api.py  test_approval_coverage.py  test_approval_resume.py  test_audit_coverage.py  test_audit_integrity.py  test_authz_coverage.py  test_coverage_gaps.py  test_inference_api.py  test_memory_coverage.py  test_multitenancy.py  (+6 more)
(+375 files in other folders)
